add page is now visible

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Library</title>
 </head>
+
 <body>
-<h1>My Library</h1>
+    <h1>My Library</h1>
     <ul>
         <li></li>
     </ul>
-    
-<a href="">Add New Book</a>
+
+    <a href="/add">Add New Book</a>
 </body>
+
 </html>
