Read books are now displayed on the home-page, if no books are read an motivating sentence is instead shown

--- a/templates/add.html
+++ b/templates/add.html
@@ -12,7 +12,7 @@
         <input name="title" type="text">
         <label>Author</label>
         <input name="author" type="text">
-        <label>Rating</label>
+        <label>Rating (Out of 10, eg. 7)</label>
         <input name="rating" type="text">
         <button type="submit">Add Book</button>
     </form>
