--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,13 @@
     {% else %}
     <ul>
         {% for book in books %}
-        <li>{{book.title}} - {{book.author}} - {{book.rating}}/10</li>
+        <li>{{book.title}} - {{book.author}} - {{book.rating}}/10 <a href="{{ url_for('edit', book_id=book.id) }}">Edit
+                Rating</a></li>
         {% endfor %}
     </ul>
     {% endif %}
 
-    <a href="/add">Add New Book</a>
+    <a href="{{ url_for('add') }}">Add New Book</a>
 </body>
 
 </html>
