--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,8 @@
     {% else %}
     <ul>
         {% for book in books %}
-        <li>{{book.title}} - {{book.author}} - {{book.rating}}/10 <a href="{{ url_for('edit', book_id=book.id) }}">Edit
+        <li><a href="{{ url_for('delete', book_id=book.id) }}">Delete</a> {{book.title}} - {{book.author}} -
+            {{book.rating}}/10 <a href="{{ url_for('edit', book_id=book.id) }}">Edit
                 Rating</a></li>
         {% endfor %}
     </ul>
